Plugin Fixes